# cfai

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.cursor/: mcp.json
backend/: .env.example  Dockerfile  alembic.ini  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260226_0001_create_health_probes.py  20260226_0002_create_auth_and_workflow_tables.py  20260301_0003_create_catalog_seed_tables.py  20260302_0004_create_analysis_workflow_artifacts.py  20260304_0005_create_analysis_workflow_projections.py  20260310_0006_rearchitecture_analysis_and_fmp_cache.py  20260317_0007_create_copilot_canvas_tables.py  20260317_0008_add_document_revision_heads.py  20260317_0009_drop_fixed_document_key_constraint.py  20260317_0010_create_copilot_skills_overrides.py  20260317_0011_create_user_memory_tables.py  20260318_0012_create_workspace_snapshot_tables.py  20260318_0013_migrate_memory_value_to_text.py  49130e0f5e18_align_schema_after_auth_prune.py
backend/app/: main.py
backend/app/agent/: __init__.py
backend/app/copilot/: __init__.py
backend/app/core/: config.py  defaults.py  logging.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/maintenance/: __init__.py  seed_service.py
backend/app/models/: __init__.py  analysis_workflow_artifact.py  analysis_workflow_event.py  catalog_seed_run.py  health_probe.py  oauth_account.py  user.py  user_session.py
backend/tests/: test_agent_runtime_policy.py  test_memory_service.py  test_skill_registry.py
(+265 files in other folders)
