[project]
name = "cfai-backend"
version = "0.1.0"
description = "CFAI FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "alembic",
  "asyncpg",
  "fastapi",
  "httpx",
  "sqlalchemy[asyncio]",
  "python-multipart",
  "uvicorn",
  "massive>=2.3.2",
  "fmpsdk>=20250102.0",
  "google-genai>=1.65.0",
]

[tool.uv]
package = false
